# cmake-test

./: .gitignore  CMakeLists.txt
test-application/: CMakeLists.txt  test-application.cpp
test-library/: CMakeLists.txt  test-library.cpp  test-library.h
